# AppliedRoboticsStudentInterface

./: CMakeLists.txt  VID5.xml  VID5_sim.xml  in_VID5.xml
include/: dubins.h
src/: dubins.cpp  student_interface.cpp  test_dubins.cpp
